# pyrson

./: README.md  pyproject.toml
binaries/linux/: rson
src/rson/: __init__.py  error.py  get_bin.py  rson.py
