[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rson"
version = "0.1.0"
description = "The Python library to load RSON-structures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

authors = [
    { name = "DukeOfFlames", email = "godemperor@godemperor.de" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://godemperor.de/Elias/pyrson"
Repository = "https://gitea.godemperor.de/Elias/pyrson"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rson*"]

[tool.setuptools.package-data]
rson = [
    "binaries/linux/rson",
    "binaries/windows/rson.exe"
]
